--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "next build",
     "db:push": "drizzle-kit push:sqlite",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
+    "@libsql/client": "^0.6.0",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "better-sqlite3": "^9.4.3",
     "drizzle-orm": "^0.29.4",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
@@ -23,7 +23,6 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.9",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
