--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "db:push": "drizzle-kit push:sqlite",
     "db:generate": "drizzle-kit generate:sqlite",
+    "db:migrate": "bun run src/server/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev --turbo",
     "lint": "next lint",
@@ -20,6 +21,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@uploadthing/react": "^6.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
@@ -30,6 +32,7 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
