--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:generate": "drizzle-kit generate:sqlite",
     "db:migrate": "bun run src/server/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sentry/nextjs": "^7.111.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@uploadthing/react": "^6.4.4",
     "class-variance-authority": "^0.7.0",
@@ -44,7 +45,7 @@
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.20.16",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
