--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:generate": "drizzle-kit generate:sqlite",
     "db:migrate": "bun run src/server/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start"
   },
