--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "geist": "^1.3.0",
     "next": "^14.2.2",
     "next-auth": "5.0.0-beta.16",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
