--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^14.2.2",
     "next-auth": "5.0.0-beta.16",
     "next-themes": "^0.3.0",
+    "posthog-js": "^1.128.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
