--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:generate": "drizzle-kit generate:sqlite",
     "db:migrate": "bun run src/server/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
@@ -21,11 +21,13 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@sentry/nextjs": "^7.111.0",
+    "@sentry/nextjs": "^7.112.1",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@uploadthing/react": "^6.4.4",
+    "@upstash/ratelimit": "^1.1.2",
+    "@upstash/redis": "^1.30.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.29.5",
     "geist": "^1.3.0",
     "next": "^14.2.2",
@@ -39,7 +41,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
-    "zod": "^3.23.0"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -47,8 +49,8 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "drizzle-kit": "^0.20.17",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.2",
