--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,16 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+DATABASE_URL= your sqlite data base url
+DATABASE_AUTH_TOKEN= your sqlite data base auth token / not needed if using sqlite local file
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
 
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
 
-# Drizzle
-DATABASE_URL="db.sqlite"
+AUTH_SECRET= Next Auth secret
+AUTH_GOOGLE_ID= Google OAuth ID
+AUTH_GOOGLE_SECRET= Google OAuth Secret
 
-# Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
-NEXTAUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+UPLOADTHING_SECRET= your uploadthing api key
+UPLOADTHING_APP_ID= your uploadthing app id
+
+UPSTASH_REDIS_REST_URL= upstash redis rest url
+UPSTASH_REDIS_REST_TOKEN= upstash redis rest token
+
